spacing on header/footer, fix mobile font hopefully

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
 
 .App {
   text-align: center;
-  font-family: "Roboto";
+  font-family: 'Roboto', sans-serif;
   scroll-behavior: smooth;
   font-size: 14pt;
   overflow-x: hidden;
